fix: decrease the size of CallView on smaller screens
so that when the user opens the search box, it does not disappear, and AuxPanel does not need an awkward scrollbar

--- a/res/css/views/voip/_CallView.scss
+++ b/res/css/views/voip/_CallView.scss
@@ -31,7 +31,7 @@ limitations under the License.
     .mx_CallView_voice {
         height: 360px;
         @media only screen and (max-height: 768px) {
-            height: 300px;
+            height: 220px;
         }
     }
 }
